# PrimalDawnEngine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  README_CN.md
components/bites/: CMakeLists.txt
components/bites/include/: application_context.hpp  bites_prequisites.hpp  geometry_cube.hpp  geometry_factory.hpp  geometry_sphere.hpp  primitive_shape.hpp  primitive_sphere.hpp  static_plugin_loader.hpp
components/bites/src/: application_context.cpp  geometry_cube.cpp  geometry_factory.cpp  geometry_sphere.cpp  primitive_shape.cpp  sphere.cpp  static_plugin_loader.cpp
engine/: CMakeLists.txt  README.md  buffer.hpp  command_manager.hpp  context.hpp  engine.hpp  render_process.hpp  renderer.hpp  shader.hpp  swapchain.hpp  tool.hpp  vertex.hpp
engine/include.old/core/: Camera.hpp  Engine.hpp  Logging.hpp  View.hpp
engine/include.old/fg/: FrameGraph.hpp
engine/include.old/platform/: PlatformEnums.hpp  PlatformFactory.hpp  WindowSystem.hpp  WindowSystemFactory.hpp
engine/include/core/: Camera.hpp  Engine.hpp  Logging.hpp  RenderSystem.hpp  Renderer.h  Scene.h  Scene.hpp  Singleton.hpp  SwapChain.h  SwapChain.hpp  View.h  View.hpp  Viewport.h  Viewport.hpp  engine.h  engine_config.hpp  render_system.hpp  render_system_config.hpp
engine/include/core/util/: Logging.h
engine/include/platform/: Driver.h  DriverEnums.h  GraphicsCore.hpp  Platform.h  Platform.hpp  PlatformEnums.h  PlatformEnums.hpp  PlatformFactory.h  PlatformFactory.hpp  PlatformVulkan.h  PlatformVulkanWin32.h  RenderSystemFactory.hpp  SDLWindow.h  VulkanCommon.h  Window.h  WindowSystem.h  WindowSystem.hpp  WindowSystemSDL.h  platform_config.hpp  platform_enum.hpp  window_system.hpp  window_system_config.hpp
engine/include/primaldawn/: api.hpp  camera.hpp  config.hpp  engine.hpp  enums.hpp  platform.hpp  platform_enum.hpp  renderer.hpp  scene.hpp  view.hpp
engine/include/primaldawn/utils/: entity.hpp  entity_manager.hpp
engine/include/tool/: platform_factory.hpp  render_system_factory.hpp  window_system_factory.hpp
engine/include/util/: Util.hpp
engine/ninclude/core/: Camera.hpp  Engine.hpp  Logging.hpp  Scene.hpp  View.hpp
engine/ninclude/platform/: Platform.hpp
engine/ninclude/tool/: PlatformFactory.hpp  RenderSystemFactory.hpp
engine/nsrc/: Engine.cpp
engine/nsrc/platform/: PlatformFactory.cpp
engine/src/: Logging.cpp  PlatformFactory.cpp  Renderer.cpp  SDLWindow.cpp  Scene.cpp  SwapChain.cpp  View.cpp  Window.cpp  WindowSystem.cpp  WindowSystemSDL.cpp  allocators.hpp  camera.cpp  downcast.hpp  engine.cpp  logging.cpp  platform.cpp  platform_factory.cpp  render_system.cpp  renderer.cpp  scene.cpp  view.cpp
engine/src.old/core/: RenderSystem.cpp  Renderer.cpp  WindowSystem.cpp  engine.cpp
engine/src.old/platform/: RenderSystemFactory.cpp
engine/src.old/platform/os/windows/: PlatformWindows.cpp  PlatformWindows.hpp
engine/src.old/platform/rs/opengl/: GLCommon.hpp  GLShader.hpp
engine/src.old/platform/rs/vulkan/: RenderSystemVulkan.cpp  VulkanCommon.hpp  VulkanContext.hpp
engine/src.old/platform/ws/glfw3/: WindowSystemGLFW3.cpp
engine/src.old/util/: Util.cpp
engine/src/core/: Logging.cpp  Platform.cpp  RenderSystem.cpp  Renderer.cpp  Scene.cpp  SwapChain.cpp  View.cpp  WindowSystem.cpp  engine.cpp
engine/src/impl/: Platform.hpp  camera.hpp  engine.cpp  engine.hpp  factory.cpp  factory.hpp  logging.cpp  logging.hpp  platform.cpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  scene.hpp  view.cpp  view.hpp  window_system.cpp  window_system.hpp
engine/src/impl/utils/: entity.hpp  entity_manager.cpp  entity_manager.hpp
engine/src/platform/: PlatformFactory.cpp  RenderSystemFactory.cpp  WindowSystem.cpp  WindowSystemFactory.cpp
engine/src/platform/gc/vulkan/: VulkanContext.cpp
engine/src/platform/os/: platform_windows.cpp  platform_windows.hpp
engine/src/platform/os/windows/: PlatformWindows.cpp  PlatformWindows.hpp
engine/src/platform/render_system/: render_system_opengl.cpp  render_system_opengl.hpp  render_system_vulkan.cpp  render_system_vulkan.hpp
engine/src/platform/render_system/vulkan/: allocated.hpp  render_context.cpp  render_context.hpp  render_frame.cpp  render_frame.hpp  render_pipeline.cpp  render_pipeline.hpp  render_target.cpp  render_target.hpp  vulkan_common.cpp  vulkan_common.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_image_view.cpp  vulkan_image_view.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
engine/src/platform/rs/opengl/: GLCommon.hpp  GLShader.cpp  GLShader.hpp  RenderSystemOpenGL.cpp  RenderSystemOpenGL.hpp
engine/src/platform/rs/vulkan/: GLSLCompiler.cpp  GLSLCompiler.hpp  RenderSystemVulkan.cpp  RenderSystemVulkan.hpp  VulkanCommon.hpp  VulkanContext.cpp  VulkanContext.h  VulkanContext.hpp  VulkanShaderModule.cpp  VulkanShaderModule.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
engine/src/platform/window_system/: window_system_glfw3.cpp  window_system_glfw3.hpp  window_system_sdl2.cpp  window_system_sdl2.hpp
engine/src/platform/ws/glfw3/: WindowSystemGLFW3.cpp  WindowSystemGLFW3.hpp
engine/src/platform/ws/sdl2/: WindowSystemSDL2.cpp  WindowSystemSDL2.hpp
engine/src/runtime/: CMakeLists.txt  engine.cpp  engine.hpp  engine_o.cpp.bk
engine/src/runtime/core/: CMakeLists.txt  render_system.cpp  render_system.hpp
engine/src/runtime/core/include/: abstract_object.hpp  (+37 more)
engine/src/sandbox/: CMakeLists.txt  CMakeLists_o.txt
engine/src/sandbox/src/: sandbox.cpp  sandbox_o.cpp
engine/src/util/: Util.cpp
engine/src/utils/: entity.cpp  entity_manager.cpp
engine/src/vulkan/: PlatformVulkan.cpp  VulkanContext.h  VulkanInstance.h
engine/src/vulkan/platform/: PlatformVulkan.cpp  PlatformVulkanSwapChain.cpp  PlatformVulkanSwapChain.h  PlatformVulkanWin32.cpp
libs/lumavk/: CMakeLists.txt
libs/lumavk/include/lumavk/: LumaVK.h
libs/lumavk/src/: LumaVK.cpp
libs/pdapp/: CMakeLists.txt  CMakelists.txt
libs/pdapp/include/app/: App.hpp
libs/pdapp/include/pdapp/: Application.h
libs/pdapp/src/: App.cpp  Application.cpp
(+199 files in other folders)
